--- a/rootdir/etc/init.mmi.mot_device.rc
+++ b/rootdir/etc/init.mmi.mot_device.rc
@@ -1,5 +1,6 @@
 on post-fs
     # Required by FingerPrint Cards (FPC) via init so we don't need to give qseecomd or fingerprintd permissions to create them
+    mkdir /data/fpc 0700 system system
     mkdir /data/.fps 0770 system fingerp
 
     # Imager tuning data for camera subsystem
@@ -7,12 +8,12 @@ on post-fs
 
 on boot
     # Change permission for fingerprint sensor
-    chown system oem_5004 /sys/bus/spi/devices/spi6.0/nav
-    chown system oem_5004 /sys/bus/spi/devices/spi6.0/clk_enable
-    chown system oem_5004 /sys/bus/spi/devices/spi6.0/dev_enable
-    chown system oem_5004 /sys/bus/spi/devices/spi6.0/irq
-    chown system oem_5004 /sys/bus/spi/devices/spi6.0/irq_cnt
-    chmod 0440 /sys/bus/spi/devices/spi6.0/irq_cnt
+    chown system oem_5004 /sys/bus/spi/devices/spi1.0/nav
+    chown system oem_5004 /sys/bus/spi/devices/spi1.0/clk_enable
+    chown system oem_5004 /sys/bus/spi/devices/spi1.0/dev_enable
+    chown system oem_5004 /sys/bus/spi/devices/spi1.0/irq
+    chown system oem_5004 /sys/bus/spi/devices/spi1.0/irq_cnt
+    chmod 0440 /sys/bus/spi/devices/spi1.0/irq_cnt
 
 on moto-charger
     setprop ro.board.platform msm8937
