--- a/configs/sensors/sensor_def_qcomdev.conf
+++ b/configs/sensors/sensor_def_qcomdev.conf
@@ -1,5 +1,5 @@
 #
-# File: sensor_def_qcomdev.conf for sanders
+# File: sensor_def_qcomdev.conf
 #
 # Tihs file contains default sensor registry values for Qualcomm development
 # test platforms.
@@ -927,35 +927,41 @@
 4103 5 0x00010001       # SMD_ACC_WIN_TIME
 
 # Mot Chopchop config
-10000 0x38ffc7  0x10001 # max gyro rot, 57 degrees in deg, Q16
-10001 0x15dfea2 0x10001 # max chop dur, ms, Q16
-10002 0x231860  0x10001 # accel thres 1, m/s2, Q16
-10003 0xA8750   0x10001 # accel thres 2, m/s2, Q16
-10004 0x2666    0x10001 # min mag per, Q16
-10005 0x5999    0x10001 # max xy per, Q16
+10000 0x6BFF94  0x10001 # max gyro rot, 108 degrees in deg, Q16
+10001 0x15dfea2 0x10001 # max chop dur, 350 ms, Q16
+10002 0x260000  0x10001 # accel thres 1, 38m/s2, Q16
+10003 0x1A0000  0x10001 # accel thres 2, 26m/s2, Q16
+10004 0x199A    0x10001 # min mag per, 0.1, Q16
+10005 0x3334    0x10001 # max xy per, 0.2,  Q16
+
+# Mot Glance config
+10300 2621    0x10001 # Threshold Q16 fp (ms/s)
+10301 3000    0x10001 # Cool down time (ms)
+10302 0xFFFF  0x10001 # Allowed gestures (see sns_sam_mot_glance_v01.h)
 
 # ALS/Prox Config (AMS TMD2725-based)
-107 100    0x10001 # Prox Covered Threshold (PIHT)
-108 60     0x10001 # Prox Uncovered Threshold (PILT)
+107 75     0x10001 # Prox Covered Threshold (PIHT)
+108 47     0x10001 # Prox Uncovered Threshold (PILT)
 109 16     0x10001 # Prox Pulse Count (PPULSE)
 110 1      0x10001 # Prox Pulse Length (PPULSE_LEN)
-111 102    0x10001 # Prox LED Current (PLDRIVE) - in mA
-112 4      0x10001 # Prox Gain (PGAIN) - choose from 1/2/4/8
-113 2      0x10001 # Prox Persistence (PPERS)
+111 54     0x10001 # Prox LED Current (PLDRIVE) - in mA
+112 2      0x10001 # Prox Gain (PGAIN) - choose from 1/2/4/8
+113 1      0x10001 # Prox Persistence (PPERS)
 114 4000   0x10001 # Prox Integration Time (PTIME) - in us
 116 5      0x10001 # ALS Threshold High - in %
 117 5      0x10001 # ALS Threshold Low - in %
-118 200000 0x10001 # ALS Integration Time (ATIME) - in us
-119 2800   0x10001 # ALS Wait Time (WTIME) - in us
+118 51000  0x10001 # ALS Integration Time (ATIME) - in us
+119 40000  0x10001 # ALS Wait Time (WTIME) - in us
 120 4      0x10001 # ALS Gain (AGAIN) - choose from 1/4/16/64
 121 1      0x10001 # ALS Persistence (APERS)
 122 9900   0x10001 # ALS Calibration Factor
-123 170    0x10001 # ALS L1 Factor
-124 1000   0x10001 # ALS L2 Factor
-125 170    0x10001 # ALS L3 Factor
-126 41     0x10001 # ALS D Factor
+123 212    0x10001 # ALS L1 Factor
+124 714    0x10001 # ALS L2 Factor
+125 67     0x10001 # ALS L3 Factor
+126 47     0x10001 # ALS D Factor
+127 2      0x10001 # Prox Binary Search Target (x = 0~7, target = 2^x - 1)
 # ALS/Prox Mot Custom Config
-131 0x03   0x10001 # Cal Config (Bit 0 - Prox Re-cal, Bit 1 - Prox Fast-cal)
+131 0x07   0x10001 # Cal Config (Bit 0 - Prox Re-cal, Bit 1 - Prox Fast-cal, Bit 2 - Unlock Re-cal)
 132 0x00   0x10001 # Log Config (Bit 0 - Raw ALS, Bit 1 - Raw Prox, Bit 2 - Verbose)
 
 # SSI SMGR Cfg 0: BMI160 Accel DRI/FIFO
@@ -1076,7 +1082,7 @@
 223 0x00001657 0x00010001          #RMD INT Cfg param3
 224 0x00003333 0x00010001          #RMD INT Cfg param4
 
-:platform MTP
+:platform MTP_xxx_NEVER_USE
 # TMD27723 override default parameters
 100 25 0x00010001                  #visible_light_trans_ratio
 101 60 0x00010001                  #ir_light_trans_ratio
@@ -1085,21 +1091,21 @@
 104 50 0x00010001                  #far_thresh
 105 200 0x00010001                 #prx_factor
 106 32 0x00010001                  #als factor
-#107 50 0x00010001                  #ams_magic_number
-#108 1 0x00010001                   #ams_driver_id
-#109 1 0x00010001                   #calibratePhone
-#110 4 0x00010001                   #ams_sensor
-#111 250 0x00010001                 #calLuxLower
-#112 350 0x00010001                 #calLuxUpper
-#113 24 0x00010001                  #d_factor
-#114 2000 0x00010001                #iCoefB
-#115 600 0x00010001                 #iCoefC
-#116 1000 0x00010001                #iCoefD
-#117 600 0x00010001                 #proxDetect
-#118 400 0x00010001                 #proxRelease
-#119 65536 0x00010001               #luxCorrection
-#120 20 0x00010001                  #als_thresh_high
-#121 20 0x00010001                  #als_thresh_low
+107 50 0x00010001                  #ams_magic_number
+108 1 0x00010001                   #ams_driver_id
+109 1 0x00010001                   #calibratePhone
+110 4 0x00010001                   #ams_sensor
+111 250 0x00010001                 #calLuxLower
+112 350 0x00010001                 #calLuxUpper
+113 24 0x00010001                  #d_factor
+114 2000 0x00010001                #iCoefB
+115 600 0x00010001                 #iCoefC
+116 1000 0x00010001                #iCoefD
+117 600 0x00010001                 #proxDetect
+118 400 0x00010001                 #proxRelease
+119 65536 0x00010001               #luxCorrection
+120 20 0x00010001                  #als_thresh_high
+121 20 0x00010001                  #als_thresh_low
 
 # Factory magnetometer calibration
 401  0x00000001 0x00010001 #Mag_fac_cal_bias_valid
@@ -1114,7 +1120,7 @@
 413  0xFFFFFE94 0x00010001 #Compensation_matrix_2_1
 414  0x00010144 0x00010001 #Compensation_matrix_2_2
 
-:property ro.boot.hardware.revision p0
+:property ro.hw.revision p0
 # accel x/y/z
 700  -2 0x00010001 #accel-x-axis
 701   1 0x00010001 #accel-y-axis
@@ -1410,17 +1416,17 @@
 :soc_id
 # Orientation of sensors
 # accel x/y/z
-700   2 0x00010002 #accel-x-axis
-701   1 0x00010002 #accel-y-axis
-702  -3 0x00010002 #accel-z-axis
+700   1 0x00010002 #accel-x-axis
+701   2 0x00010002 #accel-y-axis
+702   3 0x00010002 #accel-z-axis
 # gyro x/y/z
 800   1 0x00010002 #gyro-x-axis
 801   2 0x00010002 #gyro-y-axis
 802   3 0x00010002 #gyro-z-axis
 # mag x/y/z
-900  -2 0x00010002 #mag-x-axis
-901   1 0x00010002 #mag-y-axis
-902   3 0x00010002 #mag-z-axis
+900  -1 0x00010002 #mag-x-axis
+901   3 0x00010002 #mag-y-axis
+902   2 0x00010002 #mag-z-axis
 # SSI SMGR Version
 1900 1 0x00010001 #Maj Ver
 1901 1 0x00010001 #Min Ver
@@ -1444,20 +1450,28 @@
 4103 5 0x10001 # SMD_ACC_WIN_TIME
 
 # Mot Chopchop config
-10000 0x68FF97  0x10001 # max gyro rot, 105 degrees in deg, Q16
-10001 0x15DFEA2 0x10001 # max chop dur, 350 ms, Q16
-10002 0x25FFDA  0x10001 # accel thres 1, 38 m/s2, Q16
-10003 0x23FFDC  0x10001 # accel thres 2, 36 m/s2, Q16
-10004 0x4CCD    0x10001 # min mag per, 0.3, Q16
-10005 0x599A    0x10001 # max xy per, 0.35, Q16
+10000 0x6BFF94  0x10001 # max gyro rot, 108 degrees in deg, Q16
+10001 0x15dfea2 0x10001 # max chop dur, 350 ms, Q16
+10002 0x29FFD6  0x10001 # accel thres 1, 42 m/s2, Q16
+10003 0x19FFE6  0x10001 # accel thres 2, 26 m/s2, Q16
+10004 0x4CCC    0x10001 # min mag per, 30%, Q16
+10005 0x5999    0x10001 # max xy per,35%,  Q16
+
+# Mot Flatup config
+10200 13   0x10001 #flat status gpio
+
+# Mot Glance config
+10300 2621    0x10001 # Threshold Q16 fp (ms/s)
+10301 3000    0x10001 # Cool down time (ms)
+10302 0xFFFF  0x10001 # Allowed gestures (see sns_sam_mot_glance_v01.h)
 
 # ALS/Prox Config (AMS TMD2725-based)
-107 85     0x10001 # Prox Covered Threshold (PIHT)
-108 65     0x10001 # Prox Uncovered Threshold (PILT)
-109 32     0x10001 # Prox Pulse Count (PPULSE)
+107 40     0x10001 # Prox Covered Threshold (PIHT)
+108 26     0x10001 # Prox Uncovered Threshold (PILT)
+109 3      0x10001 # Prox Pulse Count (PPULSE)
 110 1      0x10001 # Prox Pulse Length (PPULSE_LEN)
-111 54     0x10001 # Prox LED Current (PLDRIVE) - in mA
-112 1      0x10001 # Prox Gain (PGAIN) - choose from 1/2/4/8
+111 100    0x10001 # Prox LED Current (PLDRIVE) - in mA
+112 4      0x10001 # Prox Gain (PGAIN) - choose from 1/2/4/8
 113 1      0x10001 # Prox Persistence (PPERS)
 114 4000   0x10001 # Prox Integration Time (PTIME) - in us
 116 5      0x10001 # ALS Threshold High - in %
@@ -1467,10 +1481,10 @@
 120 4      0x10001 # ALS Gain (AGAIN) - choose from 1/4/16/64
 121 1      0x10001 # ALS Persistence (APERS)
 122 9900   0x10001 # ALS Calibration Factor
-123 200    0x10001 # ALS L1 Factor
-124 697    0x10001 # ALS L2 Factor
-125 85     0x10001 # ALS L3 Factor
-126 52     0x10001 # ALS D Factor
+123 170    0x10001 # ALS L1 Factor
+124 190    0x10001 # ALS L2 Factor
+125 0      0x10001 # ALS L3 Factor
+126 41     0x10001 # ALS D Factor
 127 2      0x10001 # Prox Binary Search Target (x = 0~7, target = 2^x - 1)
 # ALS/Prox Mot Custom Config
 131 0x07   0x10001 # Cal Config (Bit 0 - Prox Re-cal, Bit 1 - Prox Fast-cal, Bit 2 - Unlock Re-cal)
@@ -1489,7 +1503,7 @@
 1911 0 0x00010001                  #sensor_id
 1912 0 0x00010001                  #CS for SPI
 1913 1 0x00010001                  #data_type1
-1914 4 0x00010001                  #data_type2
+1914 0 0x00010001                  #data_type2
 1915 -1 0x00010001                 #rel_sns_idx
 1916 2 0x00010001                  #sens_default
 1917 0xD0 0x00010001               #flags
@@ -1508,7 +1522,7 @@
 1927 10 0x00010001                 #sensor_id
 1928 0 0x00010001                  #CS for SPI
 1929 3 0x00010001                  #data_type1
-1930 4 0x00010001                  #data_type2
+1930 0 0x00010001                  #data_type2
 1931 -1 0x00010001                 #rel_sns_idx
 1932 3 0x00010001                  #sens_default
 1933 0xD0 0x00010001               #flags
@@ -1649,6 +1663,28 @@
 222 0x00003333 0x00010001          #RMD INT Cfg param2
 223 0x00001657 0x00010001          #RMD INT Cfg param3
 224 0x00003333 0x00010001          #RMD INT Cfg param4
+
+:property ro.hw.revision p0
+# SSI SMGR Cfg 2: AKM09912 DRI (Non-FIFO override for p0)
+1949 0xC0 0x00010002               #flags
+# SSI SMGR Cfg 5: Motorola Mod Monitor
+3682 0x00 0x00010001               #device_select - Third GPIO, invalid until DVT2B
+
+:property ro.hw.revision p1a
+# SSI SMGR Cfg 2: AKM09912 DRI (Non-FIFO override for p1a)
+1949 0xC0 0x00010002               #flags
+# SSI SMGR Cfg 5: Motorola Mod Monitor
+3682 0x00 0x00010001               #device_select - Third GPIO, invalid until DVT2B
+
+:property ro.hw.revision p1a1
+# SSI SMGR Cfg 2: AKM09912 DRI (Non-FIFO override for p1a1)
+1949 0xC0 0x00010002               #flags
+# SSI SMGR Cfg 5: Motorola Mod Monitor
+3682 0x00 0x00010001               #device_select - Third GPIO, invalid until DVT2B
+
+:property ro.hw.revision p1b
+# SSI SMGR Cfg 5: Motorola Mod Monitor
+3682 0x00 0x00010001               #device_select - Third GPIO, invalid until DVT2B
 
 :platform MTP_xxx_NEVER_USE
 # TMD27723 override default parameters
