--- a/configs/thermal-engine-montana.conf
+++ b/configs/thermal-engine-montana.conf
@@ -53,62 +53,43 @@ algo_type        ss
 sampling         5000
 sensor           chg_therm
 device           battery
-set_point        50000
-set_point_clr    44000
-time_constant 0
+set_point        52000
+set_point_clr    48000
 
-[VIRTUAL-MSM-CPU]
-algo_type        virtual
-trip_sensor      msm_therm
-set_point        41000
-set_point_clr    39000
-sensors          tsens_tz_sensor4 tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7
-weights          1       1       1        1
-sampling         1000
-math             0
-
-[SS-MSM-CPU]
-algo_type        ss
-sampling         1000
-sensor           VIRTUAL-MSM-CPU
-device           battery
-set_point        43000
-set_point_clr    40000
-
-[VIRTUAL-MSM-GPU]
-algo_type        virtual
-trip_sensor      msm_therm
-set_point        41000
-set_point_clr    39000
-sensors          tsens_tz_sensor15
-sampling         1000
-math             2
-
-[SS-MSM-GPU]
-algo_type        ss
-sampling         1000
-sensor           VIRTUAL-MSM-GPU
-device           battery
-set_point        43000
-set_point_clr    40000
-
-[SS-MSM-CLUSTER0]
+[SS-MSM-CLUSTER1]
 algo_type        ss
 sampling         1000
 sensor           msm_therm
-device           cluster0
-set_point        43000
-set_point_clr    41000
-device_max_limit 1401600
+device           cpu_voltage
+set_point        45000
+set_point_clr    42000
 
 [VIRTUAL-CPUS]
 algo_type        virtual
-trip_sensor      tsens_tz_sensor9
+trip_sensor      tsens_tz_sensor5
 set_point        75000
 set_point_clr    65000
-sensors          tsens_tz_sensor9 tsens_tz_sensor10 tsens_tz_sensor11 tsens_tz_sensor12 tsens_tz_sensor13 tsens_tz_sensor4 tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor8
+sensors          tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor8 tsens_tz_sensor9
 sampling         50
 math             2
+
+[VIRTUAL-AP]
+algo_type        virtual
+trip_sensor      msm_therm
+set_point        43000
+set_point_clr    41000
+sensors          tsens_tz_sensor6  tsens_tz_sensor9
+weights          100                 100
+sampling         4000
+math             0
+
+[SS-AP-BATT]
+algo_type        ss
+sampling         5000
+sensor           VIRTUAL-AP
+device           battery
+set_point        47000
+set_point_clr    45000
 
 [SS-GPU]
 algo_type        ss
@@ -123,24 +104,34 @@ algo_type        ss
 disable
 sampling         250
 sensor           pop_mem
-device           cluster0
+device           cpu_voltage
 set_point        70000
 set_point_clr    55000
 time_constant    2
+device_max_limit 960000
 
-[SS-CPUS-ALL]
+[SS-CPUS]
 algo_type        ss
 sampling         50
 sensor           VIRTUAL-CPUS
-device           cluster0
-set_point        95000
+device           cpu_voltage
+set_point        85000
 set_point_clr    55000
+
+[CPU3_HOTPLUG_MONITOR]
+algo_type        monitor
+sampling         1000
+sensor           tsens_tz_sensor8
+thresholds       85000
+thresholds_clr   80000
+actions          hotplug_3
+action_info      1
 
 [MONITOR-CAMERA-MSM]
 algo_type          monitor
 sampling           1000
 sensor             msm_therm
-thresholds         52000    56000
-thresholds_clr     47000    53000
+thresholds         54000    58000
+thresholds_clr     49000    55000
 actions            camera   camera
 action_info        1        2
