--- a/rootdir/etc/init.mmi_device.rc
+++ b/rootdir/etc/init.mmi_device.rc
@@ -19,7 +19,7 @@ on boot
    chown system oem_5004 /sys/bus/spi/devices/spi8.0/irq_cnt
    chmod 0440 /sys/bus/spi/devices/spi8.0/irq_cnt
 
-# Sanders uses qcom sensor service
+# Montana uses qcom sensor service
 service sensors /system/vendor/bin/sensors.qcom
     class core
     user root
